ESB-918 Quality gate